# vim_golf_benchmark

./: README.md  REPORT.md  challenges.json  pyproject.toml  run_benchmark.sh
src/: executor.py  main.py  models.py  reporter.py
