[project]
name = "vim-golf-benchmark"
version = "0.1.0"
description = "A benchmark for testing LLM performance on vim golf challenges"
requires-python = ">=3.10"
dependencies = [
    "pynvim>=0.5.0",
    "ollama>=0.3.0",
    "rich>=13.7.0",
    "anthropic>=0.34.0",
]

[project.scripts]
vim-golf = "src.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = []

[tool.pyright]
venvPath = "."
venv = ".venv"
